--- a/html/_/index.html
+++ b/html/_/index.html
@@ -427,7 +427,7 @@ crossorigin=""/>
         -->
 
         <!--Onglets pour les amendements IFRA-->
-        <div class="container-fluid"></div>
+        <div class="container-fluid">
           <div class="row" style="background-color: yellow;">
             <div class="col-12">
               <ul id="ongletsIFRA" class="navbar-nav nav nav-pills nav-fill justify-content-center mx-auto" role="tablist" style="display: inline;">
@@ -575,18 +575,17 @@ crossorigin=""/>
         </div>
         <!--Fermeture du 48th amendement-->
 
-<!--Ouverture du 49th amendement-->
-<div class="tab-pane fade" id="tab49info"   role="tabpanel" aria-labelledby="pills-tab49">
-
-  <div class="container-fluid" style="background-color: red;">
-    <div class="row">
-      <div class="col-12">
-        <p>Je suis le 49th amendement</p>
-      </div><!--Ici on ferme col-12-->
-    </div><!--Ici on ferme row-->
-  </div><!--Ici on ferme container fluid-->        
-</div>  
-<!--Fermeture du 49th amendement-->
+        <!--Ouverture du 49th amendement-->
+        <div class="tab-pane fade" id="tab49info"   role="tabpanel" aria-labelledby="pills-tab49">
+          <div class="container-fluid" style="background-color: red;">
+            <div class="row">
+              <div class="col-12">
+                <p>Je suis le 49th amendement</p>
+              </div><!--Ici on ferme col-12-->
+            </div><!--Ici on ferme row-->
+          </div><!--Ici on ferme container fluid-->        
+        </div>  
+        <!--Fermeture du 49th amendement-->
 
 </p>    
 </div>   
