--- a/html/_/index.html
+++ b/html/_/index.html
@@ -591,6 +591,7 @@ crossorigin=""/>
 </div>   
 </div>
 </div>
+</div>
 
 <!-- Onglet Commentaires-->
 <div class="tab-pane fade" id="tab4info"  role="tabpanel" aria-labelledby="pills-tab4">
