--- a/html/_/index.html
+++ b/html/_/index.html
@@ -484,7 +484,7 @@ crossorigin=""/>
                   </h2>
                   <span id="modalbody-commentifra" class="textitem"></span>
                 </div><!--Fermeture blockifra1-->
-                  <!--Blocktable contient tout les tableaux + les paragraphe de responsabilité et le lien vers les modal IFRA-->
+                  <!--Blocktable contient tout les tableaux + les paragraphes de responsabilité et le lien vers les modaux IFRA-->
                 <div class="blocktable">
                   <!-- Là on arrive dans les types de tableau, il y en a 3 . Ils dépendent du contenu de modalbody-ifra (type d'amendement)-->
                   <div class="table-responsive text-center">
@@ -577,7 +577,7 @@ crossorigin=""/>
 
         <!--Ouverture du 49th amendement-->
         <div class="tab-pane fade" id="tab49info"   role="tabpanel" aria-labelledby="pills-tab49">
-          <div class="container-fluid" style="background-color: red;">
+          <div class="container-fluid" style="background-color: yellow;">
             <div class="row">
               <div class="col-12">
                 <p>Je suis le 49th amendement</p>
