--- a/html/_/index.html
+++ b/html/_/index.html
@@ -403,7 +403,7 @@ crossorigin=""/>
       <div class="col-12" style="background-color: red;">
         <!--Block Allergènes-->
         <p>
-          <h1 class="item d-inline text-size-16px">
+          <h1 class="item d-inline text-size-16px" style="background-color: white;">
             <span>
               <b lang="fr">Allergènes <sup class="fas fa-question-circle iconetab" title="Il existe 26 allergènes en parfumerie. Leur utilisation est limitée à 10 ppm dans le produit fini pour les produits non rincés (eaux de toilette par exemple), contre 100 ppm pour les produits rincés (gels douche par exemple). Une réaction allergique à un allergène de parfumerie et cosmétiques n'apparaît que pour 1 à 3% de la population européenne (source : CSSC). Il est donc rare d'être allergique à l'une de ces substances. Quoi qu'il en soit, les allergènes ont une utilisation limitée dans les produits parfumés, pour éviter toute réaction à ces produits."></sup> :</b>
               <b lang="en">Allergens <sup class="fas fa-question-circle iconetab" title="26 allergens are known in perfumery. Their use is limited to 10 ppm in finished products for non-rinced products (eaux de toilette for example), and 100 ppm for rinced products (shower gels for example)."></sup> :</b>
@@ -455,7 +455,7 @@ crossorigin=""/>
               <div class="col-12">
                 <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires-->
                 <div class="blockifra1">
-
+                <!--Type de restriction-->
                   <h2 class="amendment d-inline text-size-14px">
                     <span>
                       <b lang="fr">Type de restriction <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
@@ -463,9 +463,7 @@ crossorigin=""/>
                     </span>
                   </h2>
                   <span id="modalbody-ifra" class="textitem"></span>
-
                   <br>
-
                   <h2 class="amendment d-inline text-size-14px">
                     <span>
                       <b lang="fr">Amendement <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
