--- a/html/_/index.html
+++ b/html/_/index.html
@@ -402,7 +402,7 @@ crossorigin=""/>
     <div class="row">
       <div class="col-12" style="background-color: red;">
         <!--Block Allergènes-->
-        <p class="blackallergenes" style="background-color: white;">
+        <div class="blackallergenes" style="background-color: white;">
           <h1 class="item d-inline text-size-16px">
             <span>
               <b lang="fr">Allergènes <sup class="fas fa-question-circle iconetab" title="Il existe 26 allergènes en parfumerie. Leur utilisation est limitée à 10 ppm dans le produit fini pour les produits non rincés (eaux de toilette par exemple), contre 100 ppm pour les produits rincés (gels douche par exemple). Une réaction allergique à un allergène de parfumerie et cosmétiques n'apparaît que pour 1 à 3% de la population européenne (source : CSSC). Il est donc rare d'être allergique à l'une de ces substances. Quoi qu'il en soit, les allergènes ont une utilisation limitée dans les produits parfumés, pour éviter toute réaction à ces produits."></sup> :</b>
@@ -410,7 +410,7 @@ crossorigin=""/>
             </span>  
           </h1>
           <span id="modalbody-allergenes" class="textitem"></span>
-        </p>
+        </div>
         <!--Fin du block allergènes-->
         <!--Block IFRA entier-->
         <p class="row col-12">
