--- a/html/_/index.html
+++ b/html/_/index.html
@@ -400,7 +400,7 @@ crossorigin=""/>
 <div class="tab-pane fade" id="tab3info"   role="tabpanel" aria-labelledby="pills-tab3">
   <div class="container-fluid"> 
     <div class="row">
-      <div class="col-12" style="background-color: red;">
+      <div class="col-12 m-0" style="background-color: red;">
         <!--Block Allergènes-->
         <div class="blackallergenes" style="background-color: white;">
           <h1 class="item d-inline text-size-16px">
