--- a/html/_/index.html
+++ b/html/_/index.html
@@ -413,7 +413,7 @@ crossorigin=""/>
         </div>
         <!--Fin du block allergènes-->
         <!--Block IFRA entier-->
-        <p class="row col-12">
+        <p class="row col-12" style="background-color: white;">
           <!--Apparition du mot IFRA-->
           <h2 class="d-inline item text-size-16px">
             <b lang="fr">IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b>
