--- a/html/_/index.html
+++ b/html/_/index.html
@@ -413,7 +413,7 @@ crossorigin=""/>
         </div>
         <!--Fin du block allergènes-->
         <!--Block IFRA entier-->
-        <div class="row col-12" style="background-color: white;">
+        <div class="col-12 m-0" style="background-color: white;">
           <!--Apparition du mot IFRA-->
           <h2 class="d-inline item text-size-16px">
             <b lang="fr">IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b>
@@ -464,6 +464,7 @@ crossorigin=""/>
                   </h2>
                   <span id="modalbody-ifra" class="textitem"></span>
                   <br>
+
                   <h2 class="amendment d-inline text-size-14px">
                     <span>
                       <b lang="fr">Amendement <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
