--- a/html/_/index.html
+++ b/html/_/index.html
@@ -429,8 +429,7 @@ crossorigin=""/>
 
         <!--Onglets pour les amendements IFRA-->
         <div class="container-fluid">
-          <div class="row" style="background-color: yellow;">
-            <div class="col-12">
+          <div class="row col-12" style="background-color: yellow;">
               <ul id="ongletsIFRA" class="navbar-nav nav nav-pills nav-fill justify-content-center mx-auto" role="tablist">
                 <li class="nav-item col-5">
                   <a class="nav-link active" id="pills-tab49" href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false"  >
@@ -444,8 +443,7 @@ crossorigin=""/>
                     <span lang="en">48th amendement</span>
                   </a>
                 </li>
-              </ul> 
-            </div> 
+              </ul>  
           </div>
         </div>
 
