--- a/html/_/index.html
+++ b/html/_/index.html
@@ -429,8 +429,9 @@ crossorigin=""/>
 
         <!--Onglets pour les amendements IFRA-->
         <div class="container-fluid">
-          <div class="row col-12" style="background-color: yellow;">
-              <ul id="ongletsIFRA" class="navbar-nav nav nav-pills nav-fill justify-content-center mx-auto" role="tablist">
+          <div class="row" style="background-color: yellow;">
+            <div class="col-12" style="background-color: grey;">
+              <ul id="ongletsIFRA" class="navbar-nav nav nav-pills nav-fill justify-content-center mx-auto col-12" role="tablist">
                 <li class="nav-item col-5">
                   <a class="nav-link active" id="pills-tab49" href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false"  >
                     <span lang="fr">49ème amendement</span>
@@ -443,7 +444,8 @@ crossorigin=""/>
                     <span lang="en">48th amendement</span>
                   </a>
                 </li>
-              </ul>  
+              </ul> 
+            </div> 
           </div>
         </div>
 
