--- a/html/_/index.html
+++ b/html/_/index.html
@@ -430,7 +430,7 @@ crossorigin=""/>
         <!--Onglets pour les amendements IFRA-->
         <div class="container-fluid">
             <div class="col-12" style="background-color: grey;">
-              <ul id="ongletsIFRA" class="navbar-nav nav nav-pills nav-fill justify-content-center" role="tablist">
+              <ul id="ongletsIFRA" class="navbar-nav nav nav-pills nav-fill" role="tablist">
                 <li class="nav-item col-5">
                   <a class="nav-link active" id="pills-tab49" href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false"  >
                     <span lang="fr">49ème amendement</span>
