--- a/html/_/index.html
+++ b/html/_/index.html
@@ -430,14 +430,14 @@ crossorigin=""/>
         <!--Onglets pour les amendements IFRA-->
         <div class="container-fluid">
             <div class="col-12" style="background-color: grey;">
-              <ul id="ongletsIFRA" class="navbar-nav nav nav-pills nav-fill" role="tablist" style="background-color: yellow;">
-                <li class="nav-item col-5">
+              <ul id="ongletsIFRA" class="navbar-nav nav nav-pills nav-fill list-inline" role="tablist" style="background-color: yellow;">
+                <li class="nav-item col-6">
                   <a class="nav-link active" id="pills-tab49" href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false"  >
                     <span lang="fr">49ème amendement</span>
                     <span lang="en">49th amendement</span>
                   </a>
                 </li>
-                <li class="nav-item col-5">
+                <li class="nav-item col-6">
                   <a class="nav-link" id="pills-tab48" href="#tab48info" data-toggle="pill" aria-controls="tab48info" aria-selected="true"  >
                     <span lang="fr">48ème amendement</span>
                     <span lang="en">48th amendement</span>
