--- a/html/_/index.html
+++ b/html/_/index.html
@@ -428,8 +428,8 @@ crossorigin=""/>
         -->
 
         <!--Onglets pour les amendements IFRA-->
-        <div class="container-fluid">
-              <ul id="ongletsIFRA" class="navbar-nav nav nav-pills nav-fill list-inline" role="tablist" style="background-color: yellow;">
+        <div class="container">
+              <ul class="nav nav-tabs" role="tablist" style="background-color: yellow;">
                 <li class="nav-item col-6">
                   <a class="nav-link active" id="pills-tab49" href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false"  >
                     <span lang="fr">49ème amendement</span>
