--- a/html/_/index.html
+++ b/html/_/index.html
@@ -429,7 +429,7 @@ crossorigin=""/>
 
         <!--Onglets pour les amendements IFRA-->
         <div class="container">
-              <ul class="nav nav-tabs" role="tablist" style="background-color: yellow;">
+              <ul class="nav nav-tabs" role="tablist" style="text-align: center;">
                 <li class="nav-item col-6">
                   <a class="nav-link active" id="pills-tab49" href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false"  >
                     <span lang="fr">49ème amendement</span>
