--- a/html/_/index.html
+++ b/html/_/index.html
@@ -443,7 +443,7 @@ crossorigin=""/>
 
           <!--Ouverture du 48th amendement-->
           <div class="tab-pane fade" id="tab48info"   role="tabpanel" aria-labelledby="pills-tab48">    
-            <div class="container-fluid mt-1" style="background-color: blue;">
+            <div class="container-fluid mt-2" style="background-color: blue;">
               <div class="row">
                 <div class="col-12">
                   <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires-->
@@ -457,7 +457,7 @@ crossorigin=""/>
                     </h2>
                     <span id="modalbody-ifra" class="textitem"></span>
                     <br>
-
+                  <!--Amendement d'apparition de l'ingrédients concerné-->
                     <h2 class="amendment d-inline text-size-14px">
                       <span>
                         <b lang="fr">Amendement <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
@@ -465,9 +465,8 @@ crossorigin=""/>
                       </span>
                     </h2>
                     <span id="modalbody-amendment" class="textitem"></span>
-
                     <br>
-
+                  <!--Commentaires-->
                     <h2 class="commentaires d-inline text-size-14px">
                       <span>
                         <b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients. Les mentions suivantes sont valables pour une utilisation à forte dose de la matière première, ou en cas de sensibilité particulièrement élevée à cette matière première. Son utilisation en parfumerie étant restreinte, ces risques sont évités dans le cas des parfums."></sup> :</b>
@@ -481,7 +480,7 @@ crossorigin=""/>
                     <!-- Là on arrive dans les types de tableau, il y en a 3 . Ils dépendent du contenu de modalbody-ifra (type d'amendement)-->
                     <div class="table-responsive text-center">
                         <table class="table1">
-                          <caption class="caption"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
+                          <caption class="caption mb-2"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
                           <!-- EN-TETE DU TABLEAU-->
                           <tr>
                             <th>Cat.1</th>
