--- a/html/_/index.html
+++ b/html/_/index.html
@@ -479,7 +479,7 @@ crossorigin=""/>
                   <div class="blocktable">
                     <!-- Là on arrive dans les types de tableau, il y en a 3 . Ils dépendent du contenu de modalbody-ifra (type d'amendement)-->
                     <div class="table-responsive text-center">
-                        <table class="table1">
+                        <table class="table1" style="background-color: purple;">
                           <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
                           <!-- EN-TETE DU TABLEAU-->
                           <tr>
