--- a/html/_/index.html
+++ b/html/_/index.html
@@ -483,7 +483,7 @@ crossorigin=""/>
                           <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
                           <!-- EN-TETE DU TABLEAU-->
                           <tr>
-                            <th>Cat.1</th>
+                            <th title="Pittsburgh, 26 août 1928 - New York City, 22 février 1987">Cat.1</th>
                             <th>Cat.2</th>
                             <th>Cat.3</th>
                             <th>Cat.4</th>
