--- a/html/_/index.html
+++ b/html/_/index.html
@@ -565,8 +565,7 @@ crossorigin=""/>
                   </div><!--Ici on ferme col-12-->
                 </div><!--Ici on ferme row-->
               </div><!--Ici on ferme container fluid-->
-            </div>
-            <!--Fermeture du 48th amendement-->
+            </div><!--Fermeture du 48th amendement-->
 
             <!--Ouverture du 49th amendement-->
             <div class="tab-pane fade" id="tab49info"   role="tabpanel" aria-labelledby="pills-tab49">
@@ -577,9 +576,9 @@ crossorigin=""/>
                   </div><!--Ici on ferme col-12-->
                 </div><!--Ici on ferme row-->
               </div><!--Ici on ferme container fluid-->        
-            </div>  
-            <!--Fermeture du 49th amendement-->
-        </div>
+            </div><!--Fermeture du 49th amendement-->
+        </div><!--Fermeture du block IFRA-->
+        <br>
         <!--Block Phrase de risque-->
         <div class="blockrisques" style="background-color: white;">
           <h1 class="item d-inline text-size-16px">
@@ -590,7 +589,7 @@ crossorigin=""/>
           </h1>
           <span id="TO DEFINE" class="textitem"></span>
         </div> 
-
+        <br>
         <!--Block Pictogrammes-->
         <div class="blockpicto" style="background-color: white;">
           <h1 class="item d-inline text-size-16px">
