--- a/html/_/index.html
+++ b/html/_/index.html
@@ -571,9 +571,9 @@ crossorigin=""/>
                 <div class="row">
                   <div class="col-12">
                     <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires-->
-                    <div class="blockifra2">
+                    <div class="blockifra49">
                     <!--Type de restriction-->
-                      <h2 class="amendment d-inline text-size-14px">
+                      <h2 class="amendment49 d-inline text-size-14px">
                         <span>
                           <b lang="fr">Type de restriction <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
                           <b lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
@@ -582,7 +582,7 @@ crossorigin=""/>
                       <span id="modalbody-ifra" class="textitem"></span>
                       <br>
                     <!--Amendement d'apparition de l'ingrédients concerné-->
-                      <h2 class="amendment d-inline text-size-14px">
+                      <h2 class="amendment49 d-inline text-size-14px">
                         <span>
                           <b lang="fr">Amendement <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
                           <b lang="en">Amendment <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
@@ -591,7 +591,7 @@ crossorigin=""/>
                       <span id="modalbody-amendment" class="textitem"></span>
                       <br>
                     <!--Commentaires-->
-                      <h2 class="commentaires d-inline text-size-14px">
+                      <h2 class="commentaires49 d-inline text-size-14px">
                         <span>
                           <b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients. Les mentions suivantes sont valables pour une utilisation à forte dose de la matière première, ou en cas de sensibilité particulièrement élevée à cette matière première. Son utilisation en parfumerie étant restreinte, ces risques sont évités dans le cas des parfums."></sup> :</b>
                           <b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions. The following mentions are valid for a high use of the raw material, or in case of hish sensitiveness for the raw material. Its use in perfumery being restricted, these risks are avoided in perfumes."></sup> :</b>
