--- a/html/_/index.html
+++ b/html/_/index.html
@@ -473,6 +473,7 @@ crossorigin=""/>
                       </h2>
                       <span id="modalbody-commentifra" class="textitem"></span>
                     </div><!--Fermeture blockifra1-->
+
                     <!--Blocktable contient tout les tableaux + les paragraphes de responsabilité et le lien vers les modaux IFRA-->
                     <div class="blocktable">
                       <!-- Là on arrive dans les types de tableau, il y en a 3 . Ils dépendent du contenu de modalbody-ifra (type d'amendement)-->
@@ -579,7 +580,7 @@ crossorigin=""/>
                           <b lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
                         </span>
                       </h2>
-                      <span id="modalbody-ifra" class="textitem"></span>
+                      <span id="modalbody-ifra49" class="textitem"></span>
                       <br>
                     <!--Amendement d'apparition de l'ingrédients concerné-->
                       <h2 class="amendment49 d-inline text-size-14px">
@@ -598,7 +599,65 @@ crossorigin=""/>
                         </span>  
                       </h2>
                       <span id="modalbody-commentifra" class="textitem"></span>
-                    </div><!--Fermeture blockifra1-->
+                    </div><!--Fermeture blockifra49-->
+
+                    <div class="blocktable49">
+                      <div class="table-responsive text-center">
+                            <table class="table149">
+                              <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
+                              <!-- EN-TETE DU TABLEAU-->
+                              <tr>
+                                <th>Cat.1</th>
+                                <th>Cat.2</th>
+                                <th>Cat.3</th>
+                                <th>Cat.4</th>
+                                <th>Cat.5A</th>
+                                <th>Cat.5B</th>
+                                <th>Cat.5C</th>
+                                <th>Cat.5D</th>
+                                <th>Cat.6</th>
+                                <th>Cat.7A</th>
+                                <th>Cat.7B</th>
+                                <th>Cat.8</th>
+                                <th>Cat.9</th>
+                                <th>Cat.10A</th>
+                                <th>Cat.10B</th>
+                                <th>Cat.11A</th>
+                                <th>Cat.11B</th>
+                                <th>Cat.12</th>
+                              </tr>
+                              <!-- CORPS DU TABLEAU-->
+                              <tr>
+                                <td><span id="modalbody-cat1"></span> %</td>
+                                <td><span id="modalbody-cat2"></span> %</td>
+                                <td><span id="modalbody-cat3"></span> %</td>
+                                <td><span id="modalbody-cat4"></span> %</td>
+                                <td><span id="modalbody-cat5A"></span> %</td>
+                                <td><span id="modalbody-cat5B"></span> %</td>
+                                <td><span id="modalbody-cat5C"></span> %</td>
+                                <td><span id="modalbody-cat5D"></span> %</td>
+                                <td><span id="modalbody-cat6"></span> %</td>
+                                <td><span id="modalbody-cat7A"></span> %</td>
+                                <td><span id="modalbody-cat7B"></span> %</td>
+                                <td><span id="modalbody-cat8"></span> %</td>
+                                <td><span id="modalbody-cat9"></span> %</td>
+                                <td><span id="modalbody-cat10A"></span> %</td>
+                                <td><span id="modalbody-cat10B"></span> %</td>
+                                <td><span id="modalbody-cat11A"></span> %</td>
+                                <td><span id="modalbody-cat11B"></span> %</td>
+                                <td><span id="modalbody-cat12"></span> %</td>
+                              </tr>
+                            </table>
+                      </div>
+                      <!--paragraphe de responsabilité -->
+                      <p class="logoifra text-size-11px text-center text-my-grey"><span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span><span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span></p>
+                      <!--Lien vers le site de l'IFRA-->
+                      <p class="logoifra text-size-11px" style="margin-bottom: 0;"><span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span><span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
+                      <br>
+                      <!--Lien interne sur l'IFRA-->
+                      <span lang="fr">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></span><span lang="en">To find out the specificities of each category and the ingredients prohibited by IFRA, click <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">here</a></span></p>
+                    </div> <!--Ici on ferme blocktable-->
+
                   </div><!--Ici on ferme col-12-->
                 </div><!--Ici on ferme row-->
               </div><!--Ici on ferme container fluid-->        
