--- a/html/_/index.html
+++ b/html/_/index.html
@@ -629,7 +629,10 @@ crossorigin=""/>
                                 <td><span id="modalbody-cat5D"></span> %</td>
                                 <td><span id="modalbody-cat6"></span> %</td>
                               </tr>
-                              <br>
+                              <!--Ligne vide cachée-->
+                              <tr>
+                              <td colspan="9"></td>
+                              </tr>
                               <tr>
                                 <th>Cat.7A</th>
                                 <th>Cat.7B</th>
