--- a/html/_/index.html
+++ b/html/_/index.html
@@ -631,7 +631,7 @@ crossorigin=""/>
                               </tr>
                               <!--Ligne vide cachée-->
                               <tr>
-                              <td colspan="9"></td>
+                              <td colspan="9" style="height:5%;"></td>
                               </tr>
                               <tr>
                                 <th>Cat.7A</th>
