--- a/html/_/index.html
+++ b/html/_/index.html
@@ -400,9 +400,9 @@ crossorigin=""/>
 <div class="tab-pane fade" id="tab3info"   role="tabpanel" aria-labelledby="pills-tab3">
   <div class="container-fluid"> 
     <div class="row">
-      <div class="col-12" style="background-color: red;">
+      <div class="col-12">
         <!--Block Allergènes-->
-        <div class="blockallergenes" style="background-color: white;">
+        <div class="blockallergenes">
           <h1 class="item d-inline text-size-16px">
             <span>
               <b lang="fr">Allergènes <sup class="fas fa-question-circle iconetab" title="Il existe 26 allergènes en parfumerie. Leur utilisation est limitée à 10 ppm dans le produit fini pour les produits non rincés (eaux de toilette par exemple), contre 100 ppm pour les produits rincés (gels douche par exemple). Une réaction allergique à un allergène de parfumerie et cosmétiques n'apparaît que pour 1 à 3% de la population européenne (source : CSSC). Il est donc rare d'être allergique à l'une de ces substances. Quoi qu'il en soit, les allergènes ont une utilisation limitée dans les produits parfumés, pour éviter toute réaction à ces produits."></sup> :</b>
@@ -414,7 +414,7 @@ crossorigin=""/>
         <!--Fin du block allergènes-->
         <br>
         <!--Block IFRA entier-->
-        <div class="IFRA" style="background-color: white;">
+        <div class="IFRA">
             <!--Apparition du mot IFRA-->
             <h2 class="d-inline item text-size-16px">
               <b lang="fr">IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b>
@@ -667,19 +667,8 @@ crossorigin=""/>
             </div><!--Fermeture du 49th amendement-->
         </div><!--Fermeture du block IFRA-->
         <br>
-        <!--Block Phrase de risque-->
-        <div class="blockrisques" style="background-color: white;">
-          <h1 class="item d-inline text-size-16px">
-            <span>
-              <b lang="fr">Mention de danger et conseils de prudence <sup class="fas fa-question-circle iconetab" title="A FAIRE ABSOLUMENT"></sup> :</b>
-              <b lang="en">Hazard and precautionary statement(s) <sup class="fas fa-question-circle iconetab" title="TO DO ABSOLUTELY"></sup> :</b>
-            </span>  
-          </h1>
-          <span id="TO DEFINE" class="textitem"></span>
-        </div> 
-        <br>
         <!--Block Pictogrammes-->
-        <div class="blockpicto" style="background-color: white;">
+        <div class="blockpicto">
           <h1 class="item d-inline text-size-16px">
             <span>
               <b lang="fr">Pictogrammes <sup class="fas fa-question-circle iconetab" title="A FAIRE ABSOLUMENT"></sup> :</b>
