--- a/html/_/index.html
+++ b/html/_/index.html
@@ -347,29 +347,16 @@ crossorigin=""/>
 
 </div>
 <div class="col-xs-12 col-sm-12 col-lg-4  panelcontent">
-  <h1 class="item d-inline text-size-16px">
-    <span>
-      <b lang="fr">N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b>
-      <b lang="en">CAS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></h1>
-    </span>
-  </h1>  
-  <span id="modalbody-cas" class="textitem"></span>
-  <br>
-  <h2 class="item d-inline text-size-16px">
-    <span>
-      <b lang="fr">Aspect <sup class="fas fa-question-circle iconetab" title="Couleur et état physique de la matière première."></sup> :</b>
-      <b lang="en">Aspect <sup class="fas fa-question-circle iconetab" title="Color and physical state of the raw material."></sup> :</b>
-    </span>
-  </h2>
-  <span id="modalbody-aspect" class="textitem"></span>
-  <br>
-  <h2 class="item d-inline text-size-16px">
-    <span>
-      <b lang="fr">Stabilité <sup class="fas fa-question-circle iconetab" title="Comportement de la matière première sous des conditions de haute température, de lumière, et en bases fonctionnelles diverses."></sup> :</b>
-      <b lang="en">Stability <sup class="fas fa-question-circle iconetab" title="Aspect, color, odor and molecular changes according to the conditions imposed to the raw material."></sup> :</b>
-    </span>
-  </h2>
-  <span id="modalbody-stab" class="textitem"></span>
+
+  <p><h1 class="item d-inline text-size-16px"><span><b lang="fr">N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b><b lang="en">CAS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></h1>
+  <span id="modalbody-cas" class="textitem"></span></span></p>
+  
+  <p><h2 class="item d-inline text-size-16px"><span><b lang="fr">Aspect <sup class="fas fa-question-circle iconetab" title="Couleur et état physique de la matière première."></sup> :</b><b lang="en">Aspect <sup class="fas fa-question-circle iconetab" title="Color and physical state of the raw material."></sup> :</b></h2>
+  <span id="modalbody-aspect" class="textitem"></span></span></p>
+  
+  <p><h2 class="item d-inline text-size-16px"><span><b lang="fr">Stabilité <sup class="fas fa-question-circle iconetab" title="Comportement de la matière première sous des conditions de haute température, de lumière, et en bases fonctionnelles diverses."></sup> :</b><b lang="en">Stability <sup class="fas fa-question-circle iconetab" title="Aspect, color, odor and molecular changes according to the conditions imposed to the raw material."></sup> :</b></h2>
+<span id="modalbody-stab" class="textitem"></span></span></p>
+
 </div>
 
 <div id="modalbody-pict" class="imgmp  col-xs-12 col-sm-12 col-lg-4  order-first order-sm-first order-lg-last"></div>
@@ -402,6 +389,7 @@ crossorigin=""/>
   <p><h2 class="item d-inline text-size-16px"><span><b lang="fr">Médecine alternative <sup class="fas fa-question-circle iconetab" title="Usages en aromathérapie, phytothérapie ou olfactothérapie."></sup> :</b><b lang="en">Aromatherapy <sup class="fas fa-question-circle iconetab" title="Aromatherapy, phytotherapy and olfactotherapy usage."></sup> :</b></h2>
   <span id="modalbody-medecine" class="textitem"></span></span></p>
 </div>
+
 <div id="modalbody-pictA" class="imgmp  col-xs-12 col-sm-12 col-md-12 col-lg-4  order-first order-sm-first order-lg-last"></div>
 
 </div>
