--- a/html/_/index.html
+++ b/html/_/index.html
@@ -423,7 +423,7 @@ crossorigin=""/>
             <br>
             <!--Onglets pour les amendements IFRA-->
             <div class="container">
-                  <ul class="nav nav-tabs" role="tablist" style="text-align: center;">
+                  <ul class="nav nav-pills nav-justified" role="tablist" style="text-align: center;">
                     <li class="nav-item col-6">
                       <a class="nav-link active" id="pills-tab49" href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false"  >
                         <span lang="fr">49<sup>ème</sup> amendement</span>
@@ -438,7 +438,7 @@ crossorigin=""/>
                     </li>
                   </ul>  
             </div>
-
+            <div class="tab-content">
             <!--Ouverture du 48th amendement-->
             <div class="tab-pane fade" id="tab48info"   role="tabpanel" aria-labelledby="pills-tab48">    
               <div class="container-fluid mt-2" style="background-color: blue;">
@@ -666,6 +666,7 @@ crossorigin=""/>
               </div><!--Ici on ferme container fluid-->        
             </div><!--Fermeture du 49th amendement-->
         </div><!--Fermeture du block IFRA-->
+      </div><!--Fermeture du tab-content-->
         <br>
         <!--Block Pictogrammes-->
         <div class="blockpicto">
