--- a/html/_/index.html
+++ b/html/_/index.html
@@ -441,7 +441,7 @@ crossorigin=""/>
             <div class="tab-content">
             <!--Ouverture du 48th amendement-->
             <div class="tab-pane fade" id="tab48info"   role="tabpanel" aria-labelledby="pills-tab48">    
-              <div class="container-fluid mt-2" style="background-color: blue;">
+              <div class="container-fluid mt-2">
                 <div class="row">
                   <div class="col-12">
                     <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires-->
@@ -568,7 +568,7 @@ crossorigin=""/>
 
             <!--Ouverture du 49th amendement-->
             <div class="tab-pane fade" id="tab49info"   role="tabpanel" aria-labelledby="pills-tab49">
-              <div class="container-fluid" style="background-color: yellow;">
+              <div class="container-fluid">
                 <div class="row">
                   <div class="col-12">
                     <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires-->
