--- a/html/_/index.html
+++ b/html/_/index.html
@@ -445,7 +445,7 @@ crossorigin=""/>
                 <div class="row">
                   <div class="col-12">
                     <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires-->
-                    <div class="blockifra1">
+                    <div class="blockifra1 mt-3">
                     <!--Type de restriction-->
                       <h2 class="amendment d-inline text-size-14px">
                         <span>
@@ -572,7 +572,7 @@ crossorigin=""/>
                 <div class="row">
                   <div class="col-12">
                     <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires-->
-                    <div class="blockifra49">
+                    <div class="blockifra49 mt-3">
                     <!--Type de restriction-->
                       <h2 class="amendment49 d-inline text-size-14px">
                         <span>
