--- a/html/_/index.html
+++ b/html/_/index.html
@@ -424,7 +424,7 @@ crossorigin=""/>
             <!--Onglets pour les amendements IFRA-->
             <div class="container">
                   <ul class="nav nav-pills nav-justified" role="tablist" style="text-align: center;">
-                    <li class="nav-item col-6">
+                    <li class="nav-item col-6" style="color: red;">
                       <a class="nav-link active" id="pills-tab49" href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false"  >
                         <span lang="fr">49<sup>ème</sup> amendement</span>
                         <span lang="en">49<sup>th</sup> amendement</span>
