--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -59,11 +59,10 @@ crossorigin=""/>
       <li>
         <div class="content">
           <h3 id="heading17"><span lang="fr">02 février 2020</span><span lang="en">2<sup>nd</sup> february 2020</span>
-            <br><span lang="fr" class="ajoutMP">Ajout de 7 nouvelles matières premières</span><span lang="en" class="ajoutMP">7 new ingredients added </span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 6 nouvelles matières premières</span><span lang="en" class="ajoutMP">6 new ingredients added </span>
           </h3>
           <p>
-              <a class="interpop" href="../ingredients/Dynamone®__Dynamone®.html"><span lang="en">Dynamone<sup>®</sup> (CAS N°: 8016-26-0)</span><span lang="fr">Dynamone<sup>®</sup> (CAS N°: 8016-26-0)</span></a>
-              <br><a class="interpop"  href="../ingredients/Phenyl_Ethyl_Cinnamate__Cinnamate_de_Phényl_Ethyl.html"><span lang="en">Phenyl Ethyl Cinnamate (CAS N°: 103-53-7)</span><span lang="fr">Cinnamate de Phényl Ethyl (CAS N°: 103-53-7)</span></a>
+              <a class="interpop"  href="../ingredients/Phenyl_Ethyl_Cinnamate__Cinnamate_de_Phényl_Ethyl.html"><span lang="en">Phenyl Ethyl Cinnamate (CAS N°: 103-53-7)</span><span lang="fr">Cinnamate de Phényl Ethyl (CAS N°: 103-53-7)</span></a>
               <br><a class="interpop"  href="../ingredients/Farnesene__Farnesène.html"><span lang="en">Farnesene (CAS N°: 8015-73-4)</span><span lang="fr">Farnesène (CAS N°: 502-61-4)</span></a>
               <br><a class="interpop"  href="../ingredients/Syringa_Aldehyde__Aldéhyde_Syringa.html"><span lang="en">Syringa Aldehyde (CAS N°: 104-09-6)</span><span lang="fr">Aldéhyde Syringa (CAS N°: 104-09-6)</span></a>
               <br><a class="interpop"  href="../ingredients/Magnolan®__Magnolan®.html"><span lang="en">Magnolan<sup>®</sup> (CAS N°: 27606-09-3)</span><span lang="fr">Magnolan<sup>®</sup> (CAS N°: 27606-09-3)</span></a>
