--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -174,14 +174,15 @@ crossorigin=""/>
 
 <!-- C'EST ICI QUE COMMENCE LE CODE DE LA PARTIE DE GAUCHE -->
 <div class="col-12 text-center gros_titre">
-  <h1 class="gros_titre text-in-color-brown">MENTIONS LEGALES</h1>
+  <h1 class="gros_titre text-in-color-brown"><span lang="fr">DECOUVRER NOTRE NEWSLETTER ! </span><span lang="en">DISCOVER OUR NEWSLETTER ! </span></h1>
 </div>
 
 <hr>
 
 <div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
-
+<p lang="fr">Bonne nouvelle ! ScenTree lance sa newsletter au mois de mars ! Voici ce que nous vous avons préparé :  </p>
+  <p lang="en">Wallah ma gueule t'es bonne</p>
 
 
 </div>
