--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -181,9 +181,28 @@ crossorigin=""/>
 
 <div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
-<p lang="fr">Bonne nouvelle ! ScenTree lance sa newsletter au mois de mars ! Voici ce que nous vous avons préparé :  </p>
-  <p lang="en">Wallah ma gueule t'es bonne</p>
+<p><span lang="fr">Bonne nouvelle ! ScenTree lance sa newsletter au mois de mars ! Voici ce que nous vous avons préparé :  </span><span lang="en">Wallah ma gueule t'es bonne</span></p>
 
+<div class="card-deck col-12 text-center">
+  <div class="card border-secondary" style="width: 5rem;">
+    <img class="card-img-top" src="../img/calender.png" title="fréquence d'envoi de la newsletter" alt="Card image cap">
+    <div class="card-body text-secondary">
+      <p class="card-text">Toutes les semaines, je reçois les nouveautés des dernières mises à jour</p>
+    </div>
+  </div>
+  <div class="card border-secondary" style="width: 5rem;">
+    <img class="card-img-top" src="../img/sponsor.jpg" title="fréquence d'envoi de la newsletter" alt="Card image cap">
+    <div class="card-body text-secondary">
+      <p class="card-text ">Je suis tenu au courant de l'arrivée des nouveau sponsor d'ingrédient déployés sur la plateforme. Je reçois les actualités des sponsors déja présents</p>
+    </div>
+  </div>
+  <div class="card border-secondary" style="width: 5rem;">
+    <img class="card-img-top" src="../img/MP.jpg" title="fréquence d'envoi de la newsletter alt="Card image cap">
+    <div class="card-body text-secondary">
+      <p class="card-text">Je reçois des détails sur les nouveaux ingrédients ajoutés chaque dimanche</p>
+    </div>
+  </div>
+</div>
 
 </div>
 
