--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -181,30 +181,78 @@ crossorigin=""/>
 
 <div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
-<p><span lang="fr">Bonne nouvelle ! ScenTree lance sa newsletter au mois de mars ! Voici ce que nous vous avons préparé :  </span><span lang="en">Wallah ma gueule t'es bonne</span></p>
+  <p>
+    <span lang="fr">Bonne nouvelle ! ScenTree lance sa newsletter au mois de mars ! Voici ce que nous vous avons préparé : </span>
+    <span lang="en">Wallah ma gueule t'es bonne</span>
+  </p>
 
-<div class="card-deck col-12 text-center">
-  <div class="card border-secondary" style="width: 5rem;">
-    <img class="card-img-top" src="../img/calender.png" title="fréquence d'envoi de la newsletter" alt="Card image cap">
-    <div class="card-body text-secondary">
-      <p class="card-text">Toutes les semaines, je reçois les nouveautés des dernières mises à jour</p>
+  <div class="card-deck col-12 text-center">
+    <div class="card border-secondary" style="width: 5rem;">
+      <img class="card-img-top" src="../img/calender.png" title="fréquence d'envoi de la newsletter" alt="Card image cap">
+      <div class="card-body text-secondary">
+        <p class="card-text">
+          <span lang="fr">Toutes les semaines, je reçois les nouveautés des dernières mises à jour</span>
+          <span lang="en">A TRADUIRE</span>
+        </p>
+      </div>
+    </div>
+    <div class="card border-secondary" style="width: 5rem;">
+      <img class="card-img-top" src="../img/sponsor.jpg" title="fréquence d'envoi de la newsletter" alt="Card image cap">
+      <div class="card-body text-secondary">
+        <p class="card-text ">
+          <span lang="fr">Je suis tenu au courant de l'arrivée de nouveaux sponsor sur la plateforme. Je reçois les actualités des sponsors déja présents</span>
+          <span lang="en">A TRADUIRE</span>
+        </p>
+      </div>
+    </div>
+    <div class="card border-secondary" style="width: 5rem;">
+      <img class="card-img-top" src="../img/MP.jpg" title="fréquence d'envoi de la newsletter" alt="Card image cap">
+      <div class="card-body text-secondary">
+        <p class="card-text">
+          <span lang="fr">Je reçois des détails sur les nouveaux ingrédients ajoutés chaque dimanche</span>
+          <span lang="en">A TRADUIRE</span>
+        </p>
+      </div>
     </div>
   </div>
-  <div class="card border-secondary" style="width: 5rem;">
-    <img class="card-img-top" src="../img/sponsor.jpg" title="fréquence d'envoi de la newsletter" alt="Card image cap">
-    <div class="card-body text-secondary">
-      <p class="card-text ">Je suis tenu au courant de l'arrivée des nouveau sponsor d'ingrédient déployés sur la plateforme. Je reçois les actualités des sponsors déja présents</p>
+  
+  <div class="formulaire">
+  <form>
+  <!--Nom-->  
+    <div class="form-group row">
+      <label for="inputname" class="col-2 col-form-label"><span lang="fr">Nom :</span><span lang="en">Name :</span></label>
+      <div class="col-10">
+        <input type="text" class="form-control" id="inputname" placeholder="Saisir votre nom ici..">
+      </div>
     </div>
-  </div>
-  <div class="card border-secondary" style="width: 5rem;">
-    <img class="card-img-top" src="../img/MP.jpg" title="fréquence d'envoi de la newsletter alt="Card image cap">
-    <div class="card-body text-secondary">
-      <p class="card-text">Je reçois des détails sur les nouveaux ingrédients ajoutés chaque dimanche</p>
+  <!-- Prénom-->  
+    <div class="form-group row">
+      <label for="inputfirstname" class="col-2 col-form-label"><span lang="fr">Prénom :</span><span lang="en">First name :</span></label>
+      <div class="col-10">
+        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Saisir votre prénom ici..">
+      </div>  
     </div>
-  </div>
+  <!--emails -->
+    <div class="form-group row">
+      <label for="inputmail" class="col-2 col-form-label"><span lang="fr">Adresse mail :</span><span lang="en">Email adress :</span></label>
+    <div class="col-10">
+        <input type="email" class="form-control" id="inputmail" placeholder="name@example.com"> 
+      </div>  
+    </div>
+  <!-- date de naissance-->
+    <div class="form-group row">
+      <label for="inputbirthday" class="col-2 col-form-label"><span lang="fr">Date de naissance :</span><span lang="en">Birth date :</span></label>
+      <div class="col">
+        <input class="form-control" type="date" value="2011-08-19" id="example-datetime-local-input">
+      </div>  
+    </div>
+
+  <!-- bouton d'envoi du formulaire-->
+    <button type="submit" class="btn btn-secondary text-center"><span lang="fr">M'inscrire à la newsletter</span><span lang="en">Suscribe to newsletter</span></button>
+  </form>  
 </div>
 
-</div>
+</div><!--FIN BLOCK SCROLLABLE-->
 
 </div>
 </div>
