--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -252,6 +252,16 @@ crossorigin=""/>
   </form>  
 </div>
 
+<!--RGPD-->
+<p class="mt-2">
+  <b><span lang="fr">Protection des données personnelles :</span>
+     <span lang="en">Protection of personal data :</span></b>
+</p>
+<p>
+  <span lang="fr">En application du Règlement UE 2016/679 du 27 avril 2016 relatif à la protection des données personnelles, vous disposez du droit de vous opposer à tout moment à la réception de nos newsletters en cliquant sur le lien hypertexte présent dans celles-ci.</span>
+  <span lang="en">In application of EU Regulation 2016/679 of 27 April 2016 regarding the protection of personal data, you have the right to contest at any time the receipt of our newsletters by clicking on the hypertext link in them.</span>
+</p>
+
 </div><!--FIN BLOCK SCROLLABLE-->
 
 </div>
