--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -253,7 +253,7 @@ crossorigin=""/>
 </div>
 
 <!--RGPD-->
-<p class="mt-2">
+<p class="mt-4 mb-0">
   <b><span lang="fr">Protection des données personnelles :</span>
      <span lang="en">Protection of personal data :</span></b>
 </p>
