--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -181,9 +181,9 @@ crossorigin=""/>
 
 <div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
-  <p>
+  <p class="mt-3">
     <span lang="fr">Bonne nouvelle ! ScenTree lance sa newsletter au mois de mars ! Voici ce que nous vous avons préparé : </span>
-    <span lang="en">Wallah ma gueule t'es bonne</span>
+    <span lang="en">A TRADUIRE</span>
   </p>
 
   <div class="card-deck col-12 text-center">
