--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -186,8 +186,8 @@ crossorigin=""/>
     <span lang="en">A TRADUIRE</span>
   </p>
 
-  <div class="card-deck row col-12 text-center" style="background-color: yellow;">
-    <div class="card border-secondary" style="width: 5rem;">
+  <div class="card-deck col-12 text-center" style="background-color: yellow;">
+    <div class="card border-secondary">
       <img class="card-img-top" src="../img/calender.png" title="fréquence d'envoi de la newsletter" alt="Card image cap">
       <div class="card-body text-secondary">
         <p class="card-text">
@@ -196,7 +196,7 @@ crossorigin=""/>
         </p>
       </div>
     </div>
-    <div class="card border-secondary" style="width: 5rem;">
+    <div class="card border-secondary">
       <img class="card-img-top" src="../img/sponsor.jpg" title="fréquence d'envoi de la newsletter" alt="Card image cap">
       <div class="card-body text-secondary">
         <p class="card-text ">
@@ -205,7 +205,7 @@ crossorigin=""/>
         </p>
       </div>
     </div>
-    <div class="card border-secondary" style="width: 5rem;">
+    <div class="card border-secondary">
       <img class="card-img-top" src="../img/MP.jpg" title="fréquence d'envoi de la newsletter" alt="Card image cap">
       <div class="card-body text-secondary">
         <p class="card-text">
