--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -9,8 +9,8 @@
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
-<title lang="fr">ScenTree - Legal - Mentions Légales</title>
-<title lang="en">ScenTree - Legal - Mentions Légales</title>
+<title lang="fr">ScenTree - Newsletter</title>
+<title lang="en">ScenTree - Newsletter</title>
 <!--Description Google-->
 <meta name="description" content="ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
 <!-- Bootstrap -->
