--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -186,7 +186,7 @@ crossorigin=""/>
     <span lang="en">A TRADUIRE</span>
   </p>
 
-  <div class="card-deck col-12 text-center" style="background-color: yellow;">
+  <div class="card-deck col-12 text-center">
     <div class="card border-secondary">
       <img class="card-img-top" src="../img/calender.png" title="fréquence d'envoi de la newsletter" alt="Card image cap">
       <div class="card-body text-secondary">
