--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -220,9 +220,13 @@ crossorigin=""/>
   <form>
   <!--Nom-->  
     <div class="form-group row">
-      <label for="inputname" class="col-2 col-form-label"><span lang="fr">Nom :</span><span lang="en">Name :</span></label>
+      <label for="inputname" class="col-2 col-form-label">
+        <span lang="fr">Nom :</span>
+        <span lang="en">Name :</span>
+      </label>
       <div class="col-10">
-        <input type="text" class="form-control" id="inputname" placeholder="Saisir votre nom ici..">
+        <input type="text" class="form-control" id="inputname" lang="fr" placeholder="Saisir votre nom ici..">
+        <input type="text" class="form-control" id="inputname" lang="en" placeholder="Write your name here..">
       </div>
     </div>
   <!-- Prénom-->  
