--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -258,7 +258,7 @@ crossorigin=""/>
         <span lang="en">Birth date :</span>
       </label>
       <div class="col-9">
-        <input type="date" class="form-control" id="inputbirthdate" value="2011-08-19" >
+        <input type="date" class="form-control" id="inputbirthdate">
       </div>  
     </div>
 
