--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -258,7 +258,8 @@ crossorigin=""/>
         <span lang="en">Birth date :</span>
       </label>
       <div class="col-9">
-        <input type="date" class="form-control" id="inputbirthdate">
+        <input type="date" class="form-control" id="inputbirthdate" lang="fr">
+        <input type="date" class="form-control" id="inputbirthdate" lang="en">
       </div>  
     </div>
 
