--- a/html/_/index.html
+++ b/html/_/index.html
@@ -111,6 +111,7 @@ crossorigin=""/>
     <a class="btn mt-4 mb-4 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr"><b>Ils nous soutiennent   </b></span><span lang="en"><b>They support us  </b></span><span><i class="fas fa-info-circle notifi1"></i></span></a>
     <br>
     <a class="btn mt-1 mb-5 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr"><b>Les nouveautés !   </b></span><span lang="en"><b>News from ScenTree !  </b></span><span><i class="fas fa-info-circle notifi2"></i></span></a>
+    <a class="btn mt-1 mb-5 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr"><b>Enquête de satisfaction  </b></span><span lang="en"><b>Satisfaction survey  </b></span><span><i class="fas fa-info-circle notifi2"></i></span></a>
   </div>    
 </div>
 
@@ -120,7 +121,7 @@ crossorigin=""/>
         <!--<a class="col-12  mt-1 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/Newsletter.html">
           <span lang="fr">Newletter</span><span lang="en">Newletter</span>
         </a>-->
-        <a class="col-12 mt-5 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/sources.html">
+        <a class="col-12 mt-4 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/sources.html">
           <span lang="fr">Sources</span><span lang="en">Sources</span>
         </a>
         <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/contacts.html">
