--- a/html/_/index.html
+++ b/html/_/index.html
@@ -111,15 +111,11 @@ crossorigin=""/>
     <a class="btn mt-4 mb-3 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr"><b>Ils nous soutiennent   </b></span><span lang="en"><b>They support us  </b></span><span><i class="fas fa-info-circle notifi1"></i></span></a>
     <br>
     <a class="btn mt-1 mb-3 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr"><b>Les nouveautés !   </b></span><span lang="en"><b>News from ScenTree !  </b></span><span><i class="fas fa-info-circle notifi2"></i></span></a>
+    <br>
+    <a class="btn mt-1 mb-4 text-in-color-brown save_map_status_on_leaving" role="button"  lang="fr" href="https://docs.google.com/forms/d/e/1FAIpQLSc0Lsx5k5lzFJ3p7YJn04Pn0KbyXCDnl52cTit8hxhf4YYQJA/viewform"><b>Enquête de satisfaction  </b><i class="fas fa-info-circle notifi2"></i></a>
+    
+    <a class="btn mt-1 mb-4 text-in-color-brown save_map_status_on_leaving" role="button" lang="en" href="https://docs.google.com/forms/d/e/1FAIpQLSeQljdzyC8Lkzqs2k97ZJDeC59lIV_ws2axSNfLa_0-yOezcQ/viewform"><b>Satisfaction survey  </b><i class="fas fa-info-circle notifi2"></i></a>
 
-    <a class="btn mt-1 mb-4 text-in-color-brown save_map_status_on_leaving" role="button"  lang="fr" href="https://docs.google.com/forms/d/e/1FAIpQLSc0Lsx5k5lzFJ3p7YJn04Pn0KbyXCDnl52cTit8hxhf4YYQJA/viewform"><b>Enquête de satisfaction  </b><i class="fas fa-info-circle notifi2"></i>
-      </a>
-      
-    <span lang="en">
-    <a class="btn mt-1 mb-4 text-in-color-brown save_map_status_on_leaving" role="button" href="https://docs.google.com/forms/d/e/1FAIpQLSeQljdzyC8Lkzqs2k97ZJDeC59lIV_ws2axSNfLa_0-yOezcQ/viewform"><b>Satisfaction survey  </b>
-      <i class="fas fa-info-circle notifi2"></i>
-      </a>
-    </span>
   </div>    
 </div>
 
