--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -58,6 +58,16 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
+          <h3 id="heading18"><span lang="fr">10 février 2020</span><span lang="en">10<sup>st</sup> february 2020</span></h3>
+          <p>
+            <span lang="fr">Lancement de l'<a href="https://docs.google.com/forms/d/e/1FAIpQLSc0Lsx5k5lzFJ3p7YJn04Pn0KbyXCDnl52cTit8hxhf4YYQJA/viewform" target="_BLANK">enquête de satisfaction</a> pour recueillir votre avis sur le projet ! </span><span lang="en"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeQljdzyC8Lkzqs2k97ZJDeC59lIV_ws2axSNfLa_0-yOezcQ/viewform" target="_BLANK">satisfaction survey</a></span> 
+
+            <br><span lang="fr">Amélioration de la base de donnée</span><span lang="en">DataBase improvement </span>
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
           <h3 id="heading17"><span lang="fr">02 février 2020</span><span lang="en">2<sup>nd</sup> february 2020</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 6 nouvelles matières premières</span><span lang="en" class="ajoutMP">6 new ingredients added </span>
           </h3>
